@@ -4,6 +4,7 @@ Change: Fresh new icon (the smaller 16x16 icon remains the same)
 Change: 'Notification Timeout' setting now defaults to 10 seconds (previously defaulted to Disabled).
 Bugfix: 'Enable Context Menu' option was not working.
 Bugfix: binsearch.info wasn't working.
+Bugfix: Renamed the display options check boxes in settings to mean the reverse of what they meant before (i.e. Keeping them checked actually enables nice display names).
 
 Version 0.5.0
 --------------
